# GrafixBoard

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  question.md
.github/PULL_REQUEST_TEMPLATE/: add_feature.md  bug_fix.md  documentation.md
.github/workflows/: ci-auto-format-and-commit.yml
.templates/: gen_project.py
.templates/common/: .clangd
.templates/common/.github/workflows/: ci-auto-format-and-commit.yml  ci-build-and-test.yml
.templates/common/cmake/compilers/: cxx-compiler-configs.cmake
.templates/common/cmake/libraries/: libpython.cmake
.templates/common/cmake/utils/: common.cmake  lib-install.cmake  logging.cmake  run-python.cmake
.templates/common/scripts/: msvc-bash.bat
.templates/cuda_exe/: CMakeLists.txt
.templates/cuda_exe/cmake/: cmake-parameters.md
.templates/cuda_exe/include/_template_project_name_/math/: vec_add.hpp
.templates/cuda_exe/include/_template_project_name_/utils/: address.hpp
.templates/cuda_exe/scripts/: build.sh
.templates/cuda_exe/src/: CMakeLists.txt  vec_add.cpp  vec_add.cu
.templates/cuda_lib/: CMakeLists.txt
.templates/cuda_lib/cmake/: cmake-parameters.md
.templates/cuda_lib/cmake/config.cmake.in/: templateCpuLibConfig.cmake.in
.templates/cuda_lib/include/_template_project_name_/math/: vec_add.hpp
.templates/cuda_lib/lib/: CMakeLists.txt
.templates/cuda_lib/lib/cpu/: CMakeLists.txt  vec_add.cpp
.templates/cuda_lib/lib/cuda/: CMakeLists.txt  vec_add.cu
.templates/cuda_lib/scripts/: build.sh
.templates/cuda_lib/test/: CMakeLists.txt  test_vec_add.cpp
.templates/cxx_exe/: CMakeLists.txt
.templates/cxx_exe/cmake/: cmake-parameters.md
.templates/cxx_exe/include/_template_project_name_/math/: vec_add.hpp
.templates/cxx_exe/include/_template_project_name_/utils/: address.hpp
.templates/cxx_exe/scripts/: build.sh
.templates/cxx_exe/src/: CMakeLists.txt  vec_add.cpp
.templates/cxx_lib/: CMakeLists.txt
.templates/cxx_lib/include/_template_project_name_/: _api.hpp
.templates/cxx_lib/include/_template_project_name_/math/: vec_add.hpp
.templates/cxx_lib/lib/: vec_add.cpp
.templates/cxx_lib/test/: CMakeLists.txt  test_vec_add.cpp
.templates/reset/.github/workflows/: ci-build-and-test.yml
cmake/: cmake-parameters.md
cmake/compilers/: cuda-compiler-configs.cmake  cxx-compiler-configs.cmake
cmake/libraries/: libcuda.cmake  libtorch.cmake  libvulkan.cmake
cmake/utils/: logging.cmake
cmake/vcpkg-triplets/: x64-linux.cmake
docker/: Dockerfile
docker/data/: .bashrc.in  .inputrc  .vimrc
docker/scripts/: build.sh  exec.sh  run.sh
examples/: CMakeLists.txt  stdasync_vs_stdexec.cpp
examples/grafixcore/: CMakeLists.txt  stdasync_vs_stdexec.cpp
examples/grafixcore/math/: random.cpp
examples/grafixcore/utils/: bytestream.cpp
include/grafixboard/: _api.hpp
include/grafixboard/math/: vec_add.hpp
include/grafixcore/: entry.hpp  grafixcore.hpp  pch.hpp
include/grafixcore/algorithm/: attributes.hpp  bsplincurve.hpp  bsplinecurve.hpp  facade.hpp
include/grafixcore/common/: api.hpp  common.hpp  concepts.hpp  cxxtypes.hpp  type_traits.hpp
include/grafixcore/core/: application.hpp  assert.hpp  codes.hpp  cxxtypes.hpp  event.hpp  layer.hpp  log.hpp  platform.hpp  window.hpp
include/grafixcore/math/: random.hpp  vec_add.hpp
include/grafixcore/ui/: ui_layer.hpp
include/grafixcore/utils/: address.hpp  bytestream.hpp  factory.hpp  log.hpp
lib/: CMakeLists.txt  vec_add.cpp
lib/grafixcore/algorithm/: bsplinecurve.cpp
lib/grafixcore/core/: application.cpp  log.cpp  platform.cpp  window.cpp
lib/grafixcore/imgui/: imagui_layer.cpp  imgui_layer.hpp
lib/grafixcore/ui/: ui_layer.cpp
lib/grafixcore/utils/: log.cpp
scripts/: build.sh  format.sh  msvc-setup.bat  windows-prune-PATH.sh
src/: CMakeLists.txt  main.cpp  test_app.cpp  test_layer.hpp  test_vec_add.cpp
test/: test_vec_add.cpp
